[package]
name = "math_sd"
version = "0.0.1"
authors = ["SnefDen"]
edition = "2018"
description = "An all around math lib"
documentation = "https://docs.rs/math_sd"
readme = "README.md"
repository = "https://github.com/SnefDenGames/math_sd"
license = "MIT OR Apache-2.0"
keywords = ["math", "logic","equations","computational method","calculate"]
categories = ["algorithms", "data-structures","mathematics","science"]
exclude = ["features/*"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
